<resources>
    <string name="app_name">FitnessCrazy01</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="goals">GOALS</string>
    <string name="goal_steps">GOAL STEPS:</string>
    <string name="goal_weight">GOAL WEIGHT:</string>
    <string name="save_new_goal">SAVE NEW GOAL</string>
    <string name="update_goal">UPDATE GOAL</string>
    <string name="goal_steps_here">Goal Steps Here</string>
    <string name="goal_weight_here">Goal Weight Here</string>
    <string name="savelog">saveLog</string>
    <string name="weight_lost">Weight Lost:</string>
    <string name="log">LOG</string>
    <string name="enter_weight_lost">Enter Weight Lost</string>
    <string name="save_log">save log</string>
    <string name="username">Username</string>
    <string name="todo">TODO</string>
    <string name="fitnesscrazy">FITNESSCRAZY</string>
    <string name="login">LOGIN</string>
    <string name="register_here">Register Here</string>
    <string name="password">Password</string>
    <string name="your_informations">YOUR INFORMATION</string>
    <string name="current_height">CURRENT HEIGHT:</string>
    <string name="height_log">Height Log</string>
    <string name="date">DATE</string>
    <string name="height">HEIGHT</string>
    <string name="your_information">YOUR INFORMATION</string>
    <string name="current_weight">CURRENT WEIGHT:</string>
    <string name="weight">WEIGHT</string>
    <string name="dates">DATE</string>
    <string name="weight_log">Weight Log</string>
    <string name="daily_information">Daily Information</string>
    <string name="make_hard_boiled_eggs_at_the_beginning_of_the_week_for_a_ready_to_grab_protein_packed_snack_you_can_eat_by_itself_or_add_to_other_items_like_avocado_toast">Make hard boiled eggs at the beginning of the week for a ready to grab protein packed snack you can eat by itself or add to other items like avocado toast.</string>
    <string name="be_prepared_for_hunger_to_strike_when_on_the_go_keep_non_perishable_healthy_snacks_on_hand_in_your_gym_bag_and_purse_this_way_you_can_always_have_a_healthy_option_you_can_turn_to_when_in_a_pinch">Be prepared for hunger to strike when on the go keep non-perishable healthy snacks on hand in your gym bag and purse. This way you can always have a healthy option you can turn to when in a pinch.</string>
    <string name="develop_a_positive_attitude_your_thoughts_determine_how_you_feel_and_often_determine_what_you_can_accomplish_as_napoleon_once_said_what_your_mind_can_conceive_and_believe_you_can_achieve">Develop a positive attitude your thoughts determine how you feel and often determine what you can accomplish as napoleon once said “what your mind can conceive and believe, you can achieve”.</string>
    <string name="photos">Photos</string>
    <string name="take_picture">Take Picture</string>
    <string name="your_profile">Your Profile</string>
    <string name="user_namessss">USER NAME:</string>
    <string name="user_name_heressss">User Name Here</string>
    <string name="first_namess">FIRST NAME</string>
    <string name="first_name_heresa">First Name Here</string>
    <string name="last_nameds">LAST NAME:</string>
    <string name="last_name_heresds">Last Name Here</string>
    <string name="agesd">AGE:</string>
    <string name="age_here">Age Here</string>
    <string name="heights">HEIGHT:</string>
    <string name="height_here">Height Here</string>
    <string name="weightss">WEIGHT:</string>
    <string name="weight_heressdd">Weight Here</string>
    <string name="passwordss">PASSWORD:</string>
    <string name="password_heres">Password Here</string>
    <string name="update_infoss">UPDATE INFO</string>
    <string name="registration">Registration</string>
    <string name="user_name">USER NAME:</string>
    <string name="user_name_here">User Name Here</string>
    <string name="first_name">FIRST NAME</string>
    <string name="first_name_here">First Name Here</string>
    <string name="last_name">LAST NAME:</string>
    <string name="last_name_here">Last Name Here</string>
    <string name="age">AGE:</string>
    <string name="age_heresds">Age Here</string>
    <string name="heightsss">HEIGHT:</string>
    <string name="height_heressss">Height Here</string>
    <string name="weightssss">WEIGHT:</string>
    <string name="weight_here">Weight Here</string>
    <string name="passwordsssss">PASSWORD:</string>
    <string name="password_here">Password Here</string>
    <string name="confirm_password">CONFIRM PASSWORD:</string>
    <string name="password_heredds">Password here</string>
    <string name="complete">COMPLETE</string>
    <string name="steps">Steps</string>
    <string name="_0">0</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="weight_progress">Weight Progress</string>
    <string name="options">Options</string>
    <string name="about">ABOUT</string>
    <string name="this_app_is_designed_with_android_studio_2018_using_the_marshmallow_firmware_suporoting_the_phone_nexus_6_under_the_copy_right_act_may_this_not_be_used_differently_or_copied_for_another_purpose">This app is designed with Android studio 2018, using the marshmallow firmware. suporoting the phone nexus 6. Under the COPY RIGHT act may this not be used differently or copied for another purpose.</string>
    <string name="_0_0_2">0.0.2</string>
    <string name="version">VERSION</string>
</resources>
