<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".RegisterFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="434dp"
        android:backgroundTint="@android:color/darker_gray"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="388dp"
                    android:layout_height="wrap_content"
                    android:text="@string/registration"

                    android:textAlignment="center"
                    android:textSize="45sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="337dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:text="@string/user_name"
                    android:textColor="#fff"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/TXTBuserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#11000000"
                    android:ems="10"
                    android:hint="@string/user_name_here"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textColor="#fff"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/TXTBfirstName"
                    android:layout_width="258dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#11000000"
                    android:ems="10"
                    android:hint="@string/first_name_here"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:textColor="#fff"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/TXTBlastName"
                    android:layout_width="259dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#11000000"
                    android:ems="10"
                    android:hint="@string/last_name_here"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="338dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="78dp"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textColor="#fff"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/TXTBage"
                    android:layout_width="189dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#11000000"
                    android:ems="10"
                    android:hint="@string/age_here"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="337dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView72"
                    android:layout_width="78dp"
                    android:layout_height="wrap_content"
                    android:text="@string/heightsss"
                    android:textColor="#fff"

                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/TXTBgoalHeight"
                    android:layout_width="307dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#11000000"
                    android:ems="10"
                    android:hint="@string/height_heressss"
                    android:inputType="number|numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="337dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="78dp"
                    android:layout_height="wrap_content"
                    android:text="@string/weightssss"
                    android:textColor="#fff"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/TXTBweight"
                    android:layout_width="232dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#11000000"
                    android:ems="10"
                    android:hint="@string/weight_here"
                    android:inputType="number|numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="337dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/passwordsssss"
                    android:textColor="#fff"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/TXTBpassword"
                    android:layout_width="232dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#11000000"
                    android:ems="10"
                    android:hint="@string/password_here"
                    android:inputType="textPassword" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="396dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/confirm_password"
                    android:textColor="#fff"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/TXTBConfirmPassword"
                    android:layout_width="232dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#11000000"
                    android:ems="10"
                    android:hint="@string/password_heredds"
                    android:inputType="textPassword" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/Bregister"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_margin="50dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="150dp"
            android:background="@color/colorAccent"
            android:text="@string/complete"
            android:textAlignment="center"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>