<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    android:background="@drawable/gradient">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="487dp"
        android:backgroundTint="@android:color/darker_gray"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="388dp"
                    android:layout_height="wrap_content"
                    android:text="@string/your_profile"

                    android:textAlignment="center"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="337dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:text="@string/user_name"
                    android:textColor="#fff"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/TXTBuserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#11000000"
                    android:ems="10"
                    android:hint="@string/user_name_here"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textColor="#fff"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/TXTBfirstName"
                    android:layout_width="258dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#11000000"
                    android:ems="10"
                    android:hint="@string/first_name_here"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:textColor="#fff"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/TXTBlastName"
                    android:layout_width="259dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#11000000"
                    android:ems="10"
                    android:hint="@string/last_name_here"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="338dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="78dp"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textColor="#fff"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/TXTBage"
                    android:layout_width="189dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#11000000"
                    android:ems="10"
                    android:hint="@string/age_here"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="337dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView72"
                    android:layout_width="78dp"
                    android:layout_height="wrap_content"
                    android:text="@string/heights"
                    android:textColor="#fff"

                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/TXTBgoalHeight"
                    android:layout_width="307dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#11000000"
                    android:ems="10"
                    android:hint="@string/height_here"
                    android:inputType="number|numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="337dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="78dp"
                    android:layout_height="wrap_content"
                    android:text="@string/weightss"
                    android:textColor="#fff"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/TXTBweight"
                    android:layout_width="232dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#11000000"
                    android:ems="10"
                    android:hint="@string/weight_here"
                    android:inputType="number|numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="337dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/passwordss"
                    android:textColor="#fff"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/TXTBpassword"
                    android:layout_width="232dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#11000000"
                    android:ems="10"
                    android:hint="@string/password_heres" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="396dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Bregister"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_margin="50dp"
                    android:background="@color/colorAccent"
                    android:text="@string/update_infoss"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    tools:layout_editor_absoluteX="55dp"
                    tools:layout_editor_absoluteY="534dp" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </FrameLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/header_view"
        android:layout_gravity="start"/>
</android.support.v4.widget.DrawerLayout>