<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainLoginFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="116dp"
        android:layout_height="132dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="148dp"
        android:layout_marginTop="98dp"
        android:src="@drawable/applogo"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/TXTBuserName"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="330dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="16sp"
        android:importantForAutofill="no" tools:targetApi="o" />

    <EditText
        android:id="@+id/TXTBpassword"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/TXTBuserName"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="397dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <TextView
        android:id="@+id/TXTregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="78dp"
        android:clickable="true"
        android:text="@string/register_here"
        android:textColor="#fff"
        android:focusable="true" />

    <Button
        android:id="@+id/Blogins"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/TXTregister"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="-108dp"
        android:layout_marginBottom="107dp"
        android:background="@color/colorAccent"
        android:clickable="true"
        android:shape="ring"

        android:text="@string/login"
        android:focusable="true" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/fitnesscrazy"
        android:textColor="@android:color/white"
        android:textSize="36sp" />

</RelativeLayout>