<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GoalsFragment"
    android:background="@drawable/gradient">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="487dp"
        android:backgroundTint="@android:color/darker_gray"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="368dp"
                    android:layout_height="match_parent"
                    android:text="@string/goals"

                    android:textAlignment="center"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="337dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView72"
                    android:layout_width="141dp"
                    android:layout_height="wrap_content"
                    android:text="@string/goal_steps"
                    android:textColor="#fff"

                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/TXTBgoalSteps"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#11000000"
                    android:ems="10"
                    android:hint="@string/goal_steps_here"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    tools:targetApi="o" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="337dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="142dp"
                    android:layout_height="wrap_content"
                    android:text="@string/goal_weight"
                    android:textColor="#fff"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/TXTBgoalWeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#11000000"
                    android:ems="10"
                    android:hint="@string/goal_weight_here"
                    android:importantForAutofill="no"
                    android:inputType="number|numberDecimal"
                    tools:targetApi="o" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/BmakeGoal"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="55dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="56dp"

            android:layout_marginBottom="78dp"
            android:background="@color/colorAccent"
            android:clickable="true"
            android:shape="ring"
            android:text="@string/save_new_goal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Bupdate"
            android:focusable="true" />

        <Button
            android:id="@+id/Bupdate"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="55dp"
            android:layout_marginTop="393dp"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="88dp"
            android:background="@color/colorAccent"
            android:clickable="true"
            android:shape="ring"
            android:text="@string/update_goal"
            app:layout_constraintBottom_toTopOf="@+id/BmakeGoal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:focusable="true" />
    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/header_view"
        android:layout_gravity="start"/>
</android.support.v4.widget.DrawerLayout>
